Fixed css and js to remove first space between home and tagline on ios device

--- a/css/main.css
+++ b/css/main.css
@@ -157,7 +157,7 @@ body{
 {
 	background-image:url(../img/home-background3.jpg);
 	background-position: top;
-	min-height: 650px;
+	min-height: 550px;
 }
 
 #home h1
